package com.janavar;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringLibraryApplication {

	public static void main(String[] args) {
		SpringApplication.run(SpringLibraryApplication.class, args);
	}

}
